Fix flickering when add/remove class .fixed to sidebar

--- a/themes/ubuntu/static/home.css
+++ b/themes/ubuntu/static/home.css
@@ -246,6 +246,10 @@ blockquote cite {
 
 
 /* Start sidebar */
+#sidebar {
+  padding-top: 10px;
+  margin-top: -10px;
+}
 #sidebar ul {
   margin-bottom: 10px;
 }
